unpackaged/main/default/objects/LH__Lookup_Helper_App_Settings__c/fields/LH__default_overwrite__c.field-meta.xml
<CustomField>
    <fullName>LH__default_overwrite__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The default value for 'Overwrite' when creating a Lookup Helper Setting.</description>
    <inlineHelpText>The default value for 'Overwrite' when creating a Lookup Helper Setting.</inlineHelpText>
    <label>Default Overwrite Value</label>
    <type>Checkbox</type>
</CustomField>