unpackaged/main/default/objects/LH__Lookup_Helper_App_Settings__c/fields/LH__enable_Record_Lock_Retry__c.field-meta.xml
<CustomField>
    <fullName>LH__enable_Record_Lock_Retry__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this is checked Lookup Helper will attempt to retry running settings on records that encountered record locks.</description>
    <inlineHelpText>If this is checked, Lookup Helper will attempt to retry records that encountered record locks.</inlineHelpText>
    <label>Allow Async Record Lock Retries</label>
    <type>Checkbox</type>
</CustomField>