unpackaged/main/default/objects/LH__Lookup_Helper_App_Settings__c/fields/LH__Exception_Lifespan__c.field-meta.xml
<CustomField>
    <fullName>LH__Exception_Lifespan__c</fullName>
    <description>The number of days that exceptions should be saved for before being cleaned up by Lookup Helper. The default value is 1 day.</description>
    <label>Exception Lifespan</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>