unpackaged/main/default/objects/LH__Lookup_Helper_App_Settings__c/fields/LH__Exception_Monitor_Can_Disable_Settings__c.field-meta.xml
<CustomField>
    <fullName>LH__Exception_Monitor_Can_Disable_Settings__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Allows the Lookup Helper Exception Monitor to automatically disable settings that are causing an exception.</description>
    <inlineHelpText>Allows the Lookup Helper Exception Monitor to automatically disable settings that are causing an error.</inlineHelpText>
    <label>Exception Monitor Can Disable Settings</label>
    <type>Checkbox</type>
</CustomField>