unpackaged/main/default/objects/LH__Lookup_Helper_App_Settings__c/fields/LH__Max_FlexQueue_Utilization_Pct__c.field-meta.xml
<CustomField>
    <fullName>LH__Max_FlexQueue_Utilization_Pct__c</fullName>
    <label>Max Flex Queue Utilization Percent</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>