unpackaged/main/default/objects/LH__Lookup_Helper_App_Settings__c/fields/LH__sendHighPriorityOnceDaily__c.field-meta.xml
<CustomField>
    <fullName>LH__sendHighPriorityOnceDaily__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, high priority emails are only sent once daily. When unchecked, high priority emails are sent the hour they occur.</description>
    <inlineHelpText>When checked, high priority emails are only sent once daily. When unchecked, high priority emails are sent the hour they occur.</inlineHelpText>
    <label>Send High Priority Email Only Daily?</label>
    <type>Checkbox</type>
</CustomField>