unpackaged/main/default/objects/LH__Lookup_Helper_App_Settings__c/fields/LH__sortDirectionForAllSettingsPage__c.field-meta.xml
<CustomField>
    <fullName>LH__sortDirectionForAllSettingsPage__c</fullName>
    <label>All Settings Sort Direction</label>
    <length>4</length>
    <type>Text</type>
</CustomField>