unpackaged/main/default/objects/LH__Lookup_Helper_App_Settings__c/fields/LH__sortFieldForAllSettingsPage__c.field-meta.xml
<CustomField>
    <fullName>LH__sortFieldForAllSettingsPage__c</fullName>
    <label>All Settings Sort Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>