unpackaged/main/default/objects/LH__Lookup_Helper_App_Settings__c/fields/LH__Trigger_Deployments_Run_Tests__c.field-meta.xml
<CustomField>
    <fullName>LH__Trigger_Deployments_Run_Tests__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this is checked all local tests will run during realtime trigger deployments. If left unchecked only the realtime trigger test will run.</description>
    <label>Run All Local Tests on Trigger Creation?</label>
    <type>Checkbox</type>
</CustomField>