unpackaged/main/default/objects/LH__Lookup_Helper_App_Settings__c/fields/LH__Update_Converted_Leads__c.field-meta.xml
<CustomField>
    <fullName>LH__Update_Converted_Leads__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this is checked, Lookup Helper will attempt to update converted leads when running lookups on the Lead object.</description>
    <inlineHelpText>If this is checked, Lookup Helper will attempt to update converted leads when running lookups on the Lead object.</inlineHelpText>
    <label>Update Converted Leads</label>
    <type>Checkbox</type>
</CustomField>